--- a/index.html
+++ b/index.html
@@ -388,8 +388,7 @@
           <h4 style="margin-top:0">Quick links</h4>
 
           <div style="display:flex;flex-direction:column;gap:8px;margin-top:12px">
-            <a class="badge"
-              hre="https://github.com/Rohit-bot999/Responsive-Portfolio-without-using-a-javascript.git">Download Cv</a>
+            <a class="badge" href="ROHIT KUMAR - Resume.pdf">Download Cv</a>
             <a class="badge" href="https://github.com/Rohit-bot999">GitHub</a>
             <a class="badge" href="https://www.linkedin.com/in/rohit-kumar-876b1a299">Linkdin</a>
           </div>
